--- a/docs/challenges/c1.md
+++ b/docs/challenges/c1.md
@@ -1,5 +1,5 @@
 # Talk to Santa & Find the Turtle Doves
-Hint: no hints
+**Hint**: none
 
 ## Request
 > This is a little embarrassing, but I need your help.  
