--- a/docs/challenges/c2.md
+++ b/docs/challenges/c2.md
@@ -1,5 +1,5 @@
 # Unredact Threatening Document
-Hint: no hints
+**Hint**: none
 
 ## Request
 > Someone sent a [threatening letter](https://downloads.elfu.org/LetterToElfUPersonnel.pdf) to Elf University.  
