--- a/docs/challenges/c3.md
+++ b/docs/challenges/c3.md
@@ -1,5 +1,5 @@
 # Windows Log Analysis - Evaluate Attack Outcome
-Hint: [Bushy Evergreen - "Escape Ed"](../hints/h3.md)
+**Hint**: [Bushy Evergreen - "Escape Ed"](../hints/h3.md)
 
 ## Question
 > We're seeing attacks against the Elf U domain!  
