--- a/docs/hints/h11.md
+++ b/docs/hints/h11.md
@@ -1,7 +1,7 @@
 # Kent Tinseltooth - "Smart Braces"
 ![Kent Tinseltooth](../img/hints/h11/kent_tinseltooth.png){: .elf_avatar}
 
-Hint for: [Open the Sleigh Shop Door](../../challenges/c11/)
+**Challenge**: [Open the Sleigh Shop Door](../challenges/c11.md)
 
 ## Request
 > OK, this is starting to freak me out!  
@@ -16,7 +16,7 @@ Hint for: [Open the Sleigh Shop Door](../../challenges/c11/)
 - [How to configure iptables on CentOS](https://upcloud.com/community/tutorials/configure-iptables-centos/)
 
 ## Solution
-The challenge starts off with a conversation between Kent and a mysterious voice his head. It doesn't provide any real tips or hints except maybe for a little bit of context and a mention of the `srf.elfu.org` domain which we'll be using in [challenge 12](../../challenges/c11/).
+The challenge starts off with a conversation between Kent and a mysterious voice his head. It doesn't provide any real tips or hints except maybe for a little bit of context and a mention of the `srf.elfu.org` domain which we'll be using in [challenge 12](../challenges/c12.md).
 
 ![Conversation](../img/hints/h11/h11_terminal1_nopass.png)
 
