--- a/docs/hints/h12.md
+++ b/docs/hints/h12.md
@@ -1,7 +1,7 @@
 # Wunorse Openslae - "Zeek JSON Analysis"
 ![Wunorse Openslae](../img/hints/h12/wunorse_openslae.png){: .elf_avatar}
 
-Hint for: [Filter Out Poisoned Sources of Weather Data](../../challenges/c12/)
+**Challenge**: [Filter Out Poisoned Sources of Weather Data](../challenges/c12.md)
 
 ## Request
 > Wunorse Openslae here, just looking at some Zeek logs.  
