--- a/docs/hints/h3.md
+++ b/docs/hints/h3.md
@@ -1,7 +1,7 @@
 # Bushy Evergreen - "Escape Ed"
 ![Bushy Evergreen](../img/hints/h3/bushy_evergreen.png){: .elf_avatar}
 
-Hint for: [Windows Log Analysis - Evaluate Attack Outcome](../challenges/c3.md)
+**Challenge**: [Windows Log Analysis - Evaluate Attack Outcome](../challenges/c3.md)
 
 ## Request
 > Hi, I'm Bushy Evergreen. Welcome to Elf U!  
