--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -1,7 +1,7 @@
 # Tangle Coalbox - "Frosty Keypad"
 ![Tangle Coalbox](../img/hints/h6/tangle_coalbox.png){: .elf_avatar}
 
-Hint for: [Splunk](../../challenges/c6/)
+**Challenge**: [Splunk](../challenges/c6.md)
 
 ## Request
 > Hey kid, it's me, Tangle Coalbox.  
@@ -74,5 +74,5 @@ Code: `7331`
 
 ## Hint
 > Yep, that's it. Thanks for the assist, gumshoe.  
-> Hey, if you think you can help with another problem, [Prof. Banas](../../challenges/c6/) could use a hand too.  
+> Hey, if you think you can help with another problem, [Prof. Banas](../challenges/c6.md) could use a hand too.  
 > Head west to the other side of the quad into Hermey Hall and find him in the Laboratory.  
