--- a/docs/hints/h10.md
+++ b/docs/hints/h10.md
@@ -1,7 +1,7 @@
 # Holly Evergreen - "Mongo Pilfer"
 ![Holly Evergreen](../img/hints/h10/holly_evergreen.png){: .elf_avatar}
 
-Hint for: [Recover Cleartext Document](../../challenges/c10/)
+**Challenge**: [Recover Cleartext Document](../challenges/c10.md)
 
 ## Request
 > Hey! It's me, Holly Evergreen! My teacher has been locked out of the quiz database and can't remember the right solution.  
