Shorten titles, c3 done.

--- a/docs/challenges/c3.md
+++ b/docs/challenges/c3.md
@@ -1,4 +1,4 @@
-# Windows Log Analysis - Evaluate Attack Outcome
+# Evaluate Attack Outcome
 **Hint**: [Bushy Evergreen - "Escape Ed"](../hints/h3.md)
 
 ## Question
@@ -12,22 +12,23 @@
 - [DeepBlueCLI: a PowerShell Module for Hunt Teaming via Windows Event Logs](https://www.ericconrad.com/2016/09/deepbluecli-powershell-module-for-hunt.html)
 
 ## Solution
-1. Clone the [DeepBlueCLI](https://github.com/sans-blue-team/DeepBlueCLI) GitHub repo
-2. `Set-ExecutionPolicy RemoteSigned`
-3. `.\DeepBlue.ps1 .\Security.evtx`
-4. Output shows 3 entries stating 'Multiple admin logons for one account':
-   - pminstix
-   - supatree
-   - dsparkleleaves
-5. Only one of these 3 also has an entry indicating the account was sprayed:
-   
-```shell
-24/08/2019 02:00:20
-High number of logon failures for one account
-Security
-4672
-Username: supatree...
+Start by cloning or downloading the [DeepBlueCLI](https://github.com/sans-blue-team/DeepBlueCLI) Git repository. During a password spray attack the attacker tries the same password across a number of different accounts. When the security event log contains a high number of logon failures in combination with a succesful logon for the same account the attack was likely successful. Run `DeepBlue.ps1` against the provided log file.
+
+```powershell
+ .\DeepBlue.ps1 ..\Security.evtx | Sort-Object -Property Date | Format-List
 ```
+
+![DeepBlueCLI Output 1](../img/challenges/c3/c3_1.png)
+
+DeepBlueCLI finds evidence of the password spray attack and provides a list of 31 targeted usernames but the output is a little hard to digest. Run `DeepBlue.ps1` again, this time formatting the output as a table to make things a little easier to read.
+
+```powershell
+.\DeepBlue.ps1 ..\Security.evtx | Format-Table Message,Results
+```
+
+![DeepBlueCLI Output 2](../img/challenges/c3/c3_2.png)
+
+Out of the three accounts that had successful logons `supatree` is the only one that's also showing up in the list of 31 entries with a high number of failed logon attempts. It looks like Shinny Upatree's account is the one that was compromised.
 
 ## Answer
 Account: `supatree`
