--- a/docs/challenges/c3.md
+++ b/docs/challenges/c3.md
@@ -1,7 +1,7 @@
 # Evaluate Attack Outcome
 **Hint**: [Bushy Evergreen - "Escape Ed"](../hints/h3.md)
 
-## Question
+## Request
 > We're seeing attacks against the Elf U domain!  
 > Using the [event log data](https://downloads.elfu.org/Security.evtx.zip), identify the user account that the attacker compromised using a password spray attack.  
 > Bushy Evergreen is hanging out in the train station and may be able to help you out.
