--- a/docs/challenges/c4.md
+++ b/docs/challenges/c4.md
@@ -1,1 +1,28 @@
 # Determine Attacker Technique
+**Hint**: [SugarPlum Mary - "Linux Path"](../hints/h4.md)
+
+## Request
+> Using these [normalized Sysmon logs](https://downloads.elfu.org/sysmon-data.json.zip), identify the tool the attacker used to retrieve domain password hashes from the lsass.exe process. For hints on achieving this objective, please visit Hermey Hall and talk with SugarPlum Mary.
+
+## Resources
+- [Normalized Sysmon logs](https://downloads.elfu.org/sysmon-data.json.zip)
+- [EQL Threat Hunting](https://pen-testing.sans.org/blog/2019/12/10/eql-threat-hunting/)
+- [Sysinternals New Tool Sysmon](https://www.darkoperator.com/blog/2014/8/8/sysinternals-sysmon)
+- [How to find the adversary with EQL](https://www.youtube.com/watch?v=1QmOo0a_LuY)
+
+## Solution
+We could install EQL to query the normalized Sysmon logs and find the tool that was used to retrieve the domain password hashes from `lsass.exe`. Fortunately for us though the log only contains a handful of different types of commands. If we grep for lines containing `command_line` but exclude the ones containing `wevtutil`, `net  use`, and `powershell` only five remain.
+
+```shell
+grep command_line sysmon-data.json | grep -Evi '(powershell|net\s*use|wevtutil)'
+```
+
+![Search Sysmon](../img/challenges/c4/c4_1.png)
+
+MITRE ATT&CK technique [T1003](https://attack.mitre.org/techniques/T1003/) covers credential dumping and provides an overview of some of the commonly used tools. One of the ways to retrieve password hashes in a Windows domain setup is to use the Windows builtin `ntdsutil.exe` command line tool to grab a copy of the main Active Directory database file (i.e. [NTDS.dit](https://blogs.msdn.microsoft.com/servergeeks/2014/10/14/active-directory-files-and-their-functions/)), which is exactly what our attacker did.
+
+## Answer
+Tool: `ntdsutil`
+
+## Hint
+None
