Update some images

--- a/docs/challenges/c8.md
+++ b/docs/challenges/c8.md
@@ -1,1 +1,5 @@
 # Bypassing the Frido Sleigh CAPTEHA
+
+```json
+{"data":"<h2 id=\"result_header\"> Entries for email address crahan@n00.be no longer accepted as our systems show your email was already randomly selected as a winner! Go check your email to get your winning code. Please allow up to 3-5 minutes for the email to arrive in your inbox or check your spam filter settings. <br><br> Congratulations and Happy Holidays!</h2>","request":true}
+```
