--- a/docs/challenges/c1.md
+++ b/docs/challenges/c1.md
@@ -18,7 +18,7 @@
 - None
 
 ## Solution
-![Michael and Jane](../img/challenges/c1/c1_1.png)
+![Michael and Jane](../img/challenges/c1/c1_1_comeon.png)
 
 This objective, together with *Talk to Santa in the Quad*, doesn't require any answers to be submitted as it's meant to set the stage, point you in the right direction, and ensure you visit all areas of Elf University. To complete objective 0 and to learn more about the missing doves talk to Santa in the Quad. Once you've located the doves near the Student Union fireplace and complete objectives 2-5 objective 1 will be marked as completed and Santa will continue the conversation as indicated in the [response section](#response) below.
 
