--- a/docs/challenges/c6.md
+++ b/docs/challenges/c6.md
@@ -45,7 +45,7 @@ index=main santa
 **Answer**: `C:\Users\cbanas\Documents\Naughty_and_Nice_2019_draft.txt` 
 
 !!! note "Note"
-    Interestingly the BASE64-encoded string found in the same Splunk event decodes to a PowerShell script that tries to disable [script block logging](https://docs.splunk.com/Documentation/UBA/5.0.0/GetDataIn/AddPowerShell), downloads encrypted data from http://144.202.46[.]214:8080/admin/get.php, decrypts it using an embedded key, and finally executes the decrypted data.
+    Interestingly, the BASE64-encoded string found in the same Splunk event decodes to a PowerShell script that tries to disable [script block logging](https://docs.splunk.com/Documentation/UBA/5.0.0/GetDataIn/AddPowerShell), downloads encrypted data from http://144.202.46[.]214:8080/admin/get.php, decrypts it using an embedded key, and finally executes the decrypted code.
 
 ### Question 3
 *"What is the fully-qualified domain name(FQDN) of the command and control(C2) server? (Example: badguy.baddies.com)"*
@@ -156,7 +156,7 @@ index=main sourcetype=stoq "results{}.workers.smtp.from"="bradly buttercups <bra
 
 ![Splunk 11](../img/challenges/c6/c6_11.png)
 
-The obvious candidates for further investigation are `Buttercups_HOL404_assignment.zip` and `19th Century Holiday Cheer Assignment.docm` but both of these have been sanitized and contain a warning message. Luckily the .docm artifact also provides a hint about core.xml, stating *"The core.xml file that was a component of this original macro-enabled Word doc is still in this File Archive thanks to stoQ. Find it and you will be a happy elf :-)"*. Saves us some work of having to verify all remaining artifacts.
+The obvious candidates for further investigation are `Buttercups_HOL404_assignment.zip` and `19th Century Holiday Cheer Assignment.docm` but both of these have been sanitized and contain a warning message. Luckily the .docm artifact also provides a hint about `core.xml`, stating *"The core.xml file that was a component of this original macro-enabled Word doc is still in this File Archive thanks to stoQ. Find it and you will be a happy elf :-)"*. Saves us some work of having to verify all remaining artifacts.
 
 ![Splunk 12](../img/challenges/c6/c6_12.png)
 
