--- a/docs/challenges/c6.md
+++ b/docs/challenges/c6.md
@@ -15,7 +15,6 @@
 - [Elf University File Archive](http://elfu-soc.s3-website-us-east-1.amazonaws.com)
 
 ## Solution
-
 Jump to the [challenge solution](#challenge).
 
 ### Question 1
@@ -160,7 +159,23 @@ The obvious candidates for further investigation are `Buttercups_HOL404_assignme
 
 ![Splunk 12](../img/challenges/c6/c6_12.png)
 
-The embedded message reads: *"Kent you are so unfair. And we were going to make you the king of the Winter Carnival."*
+**Answer**: `Kent you are so unfair. And we were going to make you the king of the Winter Carnival.`
+
+All of the 20 remaining documents, who submitted them, the associated File Archive link, and email message body can be retrieved using the below Splunk query. Looks like some of the elves spent just a little more time on this assignment than others.
+
+```shell
+index=main sourcetype=stoq "results{}.workers.smtp.subject"="Holiday Cheer Assignment Submission"
+| eval results = spath(_raw, "results{}"), 
+       from = spath(_raw, "results{}.workers.smtp.from"), 
+       body = spath(_raw, "results{}.workers.smtp.body")
+| mvexpand results 
+| eval path=spath(results, "archivers.filedir.path"),
+       filename=spath(results, "payload_meta.extra_data.filename")
+| search filename="*.docx" OR filename="*.zip"
+| table from, filename, path, body
+```
+
+![Splunk 13](../img/challenges/c6/c6_13.png)
 
 ## Answer
 1. `sweetums`
