--- a/docs/challenges/c6.md
+++ b/docs/challenges/c6.md
@@ -44,7 +44,7 @@ index=main santa
 **Answer**: `C:\Users\cbanas\Documents\Naughty_and_Nice_2019_draft.txt` 
 
 !!! note "Note"
-    Interestingly, the BASE64-encoded string found in the same Splunk event decodes to a PowerShell script that tries to disable [script block logging](https://docs.splunk.com/Documentation/UBA/5.0.0/GetDataIn/AddPowerShell), downloads encrypted data from http://144.202.46[.]214:8080/admin/get.php, decrypts it using an embedded key, and finally executes the decrypted code.
+    The BASE64-encoded string found in this Splunk event decodes to a PowerShell script that tries to disable [script block logging](https://docs.splunk.com/Documentation/UBA/5.0.0/GetDataIn/AddPowerShell), downloads encrypted data from http://144.202.46[.]214:8080/admin/get.php (i.e. the command and control IP address found in [LISA](../challenges/c5.md)), decrypts it using an embedded key, and finally executes the decrypted code.
 
 ### Question 3
 *"What is the fully-qualified domain name(FQDN) of the command and control(C2) server? (Example: badguy.baddies.com)"*
