Fix c5, first c7 version.

--- a/docs/challenges/c5.md
+++ b/docs/challenges/c5.md
@@ -4,7 +4,7 @@
 ## Request
 > The attacks don't stop! Can you help identify the IP address of the malware-infected system using these [Zeek logs](https://downloads.elfu.org/elfu-zeeklogs.zip)? For hints on achieving this objective, please visit the Laboratory and talk with Sparkle Redberry.
 
-# Resources
+## Resources
 - [Zeek logs](https://downloads.elfu.org/elfu-zeeklogs.zip)
 - [Real Intelligence Threat Analytics (RITA)](https://www.activecountermeasures.com/free-tools/rita/)
 
