--- a/docs/challenges/c7.md
+++ b/docs/challenges/c7.md
@@ -1,4 +1,42 @@
 # Get Access to the Steam Tunnels
+**Hint**: [Minty Candycane - "Holiday Hack Trail"](../hints/h7.md)
+
+## Request
+> Gain access to the steam tunnels. Who took the turtle doves? Please tell us their first and last name. For hints on achieving this objective, please visit Minty's dorm room and talk with Minty Candy Cane.
+
+## Resources
+- [Key decoding](https://github.com/deviantollam/decoding)
+- [Optical Decoding of Keys](https://www.youtube.com/watch?v=KU6FJnbkeLA&feature=youtu.be)
+
+## Solution
+1. The elf in Minty's dorm room has a key hanging off his belt (screenshot1.png)
+2. Elf avatars are stored at https://2019.kringlecon.com/images/avatars/elves/elfname.png (screenshot2.png)
+3. The avatar for 'Krampus' is at https://2019.kringlecon.com/images/avatars/elves/krampus.png (screenshot3.png)
+4. Use `krampus.png` to create a copy of the key (screenshot4.png, screenshot5.png)
+5. Set the key grinder to '122520' to make a copy and open the door (screenshot6.png)
+6. Navigate into the tunnels and meet Krampus Hollyfeld
+
+## Answer
+Who took the doves: `Krampus Hollyfeld`
+
+## Hint
+> Hello there! I’m Krampus Hollyfeld.  
+> I maintain the steam tunnels underneath Elf U,  
+> Keeping all the elves warm and jolly.  
+> Though I spend my time in the tunnels and smoke,  
+> In this whole wide world, there's no happier bloke!  
+> Yes, I borrowed Santa’s turtle doves for just a bit.  
+> Someone left some scraps of paper near that fireplace, which is a big fire hazard.  
+> I sent the turtle doves to fetch the paper scraps.  
+> But, before I can tell you more, I need to know that I can trust you.  
+> Tell you what – if you can help me beat the Frido Sleigh contest (Objective 8), then I'll know I can trust you.  
+> The contest is here on my screen and at [fridosleigh.com](https://fridosleigh.com/).  
+> No purchase necessary, enter as often as you want, so I am!  
+> They set up the rules, and lately, I have come to realize that I have certain materialistic, cookie needs.  
+> Unfortunately, it's restricted to elves only, and I can't bypass the CAPTEHA.  
+> (That's Completely Automated Public Turing test to tell Elves and Humans Apart.)  
+> I've already cataloged [12,000 images](https://downloads.elfu.org/capteha_images.tar.gz) and decoded the [API interface](https://downloads.elfu.org/capteha_api.py).  
+> Can you help me bypass the CAPTEHA and submit lots of entries?
 
 
 I winged it.
