Fix incorrect image and class name.

--- a/docs/challenges/c7.md
+++ b/docs/challenges/c7.md
@@ -17,7 +17,7 @@ Each elf has their own specific CSS class and avatar image (there's even a few [
 
 ![Minty CSS](../img/challenges/c7/c7_2.png)
 
-Additionally, the HTML for Minty's room contains a div titled `krampus_scampering` with a `krampus.png` background image that is stored in the same location as the other elf avatars, `/images/avatars/elves/`.
+Additionally, the HTML for Minty's room contains a div with a class titled `krampus` and a `krampus.png` background image that is stored in the same location as the other elf avatars, `/images/avatars/elves/`.
 
 ![Krampus CSS](../img/challenges/c7/c7_3.png)
 
