c7 repo  link updates

--- a/docs/challenges/c7.md
+++ b/docs/challenges/c7.md
@@ -5,15 +5,15 @@
 > Gain access to the steam tunnels. Who took the turtle doves? Please tell us their first and last name. For hints on achieving this objective, please visit Minty's dorm room and talk with Minty Candy Cane.
 
 ## Resources
-- [Key Decoding](https://github.com/deviantollam/decoding)
-- [Optical Decoding of Keys](https://www.youtube.com/watch?v=KU6FJnbkeLA&feature=youtu.be)
+- [Key and Lock Decoding Tools](https://github.com/deviantollam/decoding)
+- [Deviant Ollam, Optical Decoding of Keys](https://www.youtube.com/watch?v=KU6FJnbkeLA)
 
 ## Solution
 To enter the steam tunnels we need to copy the right key and use it with the lock in the dorm room closet. When you enter the dorm room a mysterious figure with a key hanging from his belt will linger for a few seconds and then run away into the closet. No matter the amount of zooming and enhancing, the key resolution is far too low to be useful. We need to find a better image.
 
 ![Krampus Dorm](../img/challenges/c7/c7_1_enhance.png)
 
-Each elf has their own specific CSS class and avatar image (there's even a few [elves](../misc/interesting_ui.md#unused-elves) and [toy soldiers](../misc/interesting_ui.md#toy-elf-soldiers) which are listed in the CSS but don't seem to appear in the game itself). For example, the class and associated image for Minty's avatar are shown below.
+Each elf has their own specific CSS class and avatar image (there's even a few [elves](../misc/interesting_ui.md#unused-elves) and [toy soldiers](../misc/interesting_ui.md#toy-elf-soldiers) which are listed in the CSS but don't seem to appear in the game itself). For example, the CSS class and associated image for Minty's avatar are shown below.
 
 ![Minty CSS](../img/challenges/c7/c7_2.png)
 
@@ -25,7 +25,7 @@ Unlike other avatars that are low res though, `krampus.png` has quite a [high re
 
 ![Krampus Key](../img/challenges/c7/c7_4.png)
 
-Now look at the different measurements in the [Key Decoding](https://github.com/deviantollam/decoding) Github repository to identify the correct key type. I skipped this step and just winged it by drawing evenly spaced horizontal lines on the key image using the first and second cut as a reference (see the image below). I was fairly certain about cuts 1, 2, 3, and 5, but the fourth cut was off by one. Tweaking it slightly gave me a working key. That said, the [Schlage](https://github.com/deviantollam/decoding/blob/master/Key%20Measurments/Key%20Measurments%20-%20Schlage.png) template provides the correct measurements and will allow you to make a good copy on the first try.
+Now use the files in the [Key and Lock Decoding Tools](https://github.com/deviantollam/decoding) Github repository to identify the correct key type (i.e. Schlage). I skipped this step and just winged it by drawing evenly spaced horizontal lines on the key image using the first and second cut as a reference (see the image below). I was fairly certain about cuts 1, 2, 3, and 5, but the fourth cut was off by one. Tweaking it slightly gave me a working key on my second attempt. That said, the Schlage [measurements](https://github.com/deviantollam/decoding/blob/master/Key%20Measurments/Key%20Measurments%20-%20Schlage.png) and [decoding](https://github.com/deviantollam/decoding/blob/master/Key%20Decoding/Decoding%20-%20Schlage.png) templates provide the correct measurements and will allow you to make a good copy on the first try.
 
 ![Key Cuts](../img/challenges/c7/c7_5.png)
 
