--- a/docs/challenges/c5.md
+++ b/docs/challenges/c5.md
@@ -2,7 +2,8 @@
 **Hint**: [Sparkle Redberry - "Xmas Cheer Laser"](../hints/h5.md)
 
 ## Request
-> The attacks don't stop! Can you help identify the IP address of the malware-infected system using these [Zeek logs](https://downloads.elfu.org/elfu-zeeklogs.zip)? For hints on achieving this objective, please visit the Laboratory and talk with Sparkle Redberry.
+> The attacks don't stop! Can you help identify the IP address of the malware-infected system using these [Zeek logs](https://downloads.elfu.org/elfu-zeeklogs.zip)?  
+> For hints on achieving this objective, please visit the Laboratory and talk with Sparkle Redberry.
 
 ## Resources
 - [Zeek logs](https://downloads.elfu.org/elfu-zeeklogs.zip)
