--- a/docs/challenges/c7.md
+++ b/docs/challenges/c7.md
@@ -2,7 +2,9 @@
 **Hint**: [Minty Candycane - "Holiday Hack Trail"](../hints/h7.md)
 
 ## Request
-> Gain access to the steam tunnels. Who took the turtle doves? Please tell us their first and last name. For hints on achieving this objective, please visit Minty's dorm room and talk with Minty Candy Cane.
+> Gain access to the steam tunnels.  
+> Who took the turtle doves? Please tell us their first and last name.  
+> For hints on achieving this objective, please visit Minty's dorm room and talk with Minty Candy Cane.
 
 ## Resources
 - [Key and Lock Decoding Tools](https://github.com/deviantollam/decoding)
