--- a/docs/challenges/c8.md
+++ b/docs/challenges/c8.md
@@ -2,7 +2,8 @@
 **Hint**: [Alabaster Snowball - "Nyanshell"](../hints/h8.md)
 
 ## Request
-> Help Krampus beat the [Frido Sleigh contest](https://fridosleigh.com/). For hints on achieving this objective, please talk > with Alabaster Snowball in the Speaker Unpreparedness Room.  
+> Help Krampus beat the [Frido Sleigh contest](https://fridosleigh.com/).  
+> For hints on achieving this objective, please talk > with Alabaster Snowball in the Speaker Unpreparedness Room.  
 >  
 > Krampus:   
 > The contest is here on my screen and at [fridosleigh.com](https://fridosleigh.com/).  
