--- a/docs/challenges/c8.md
+++ b/docs/challenges/c8.md
@@ -131,9 +131,9 @@ final_answer = ','.join(answers)
 
 The remainder of Krampus' `capteha_api.py` script submits the list of UUIDs and, if successful, sends the Frido Sleigh form over and over again until a response is returned informing us we won. Be sure to replace `yourREALemailAddress` with a working email address though as the system needs to be able to send out a confirmation email. 
 
-![CAPTEHA Fail](../img/challenges/c8/c8_2.png)
-![CAPTEHA Fail](../img/challenges/c8/c8_3.png)
-![CAPTEHA Fail](../img/challenges/c8/c8_4.png)
+![CAPTEHA Bypassed](../img/challenges/c8/c8_2.png)
+![Server Response](../img/challenges/c8/c8_3.png)
+![Email](../img/challenges/c8/c8_4.png)
 
 Looks like our winning Frido Sleigh Continuous Cookie Contest code is `8Ia8LiZEwvyZr2WO`.
 
