--- a/docs/challenges/c6.md
+++ b/docs/challenges/c6.md
@@ -13,6 +13,7 @@
 ## Resources
 - [Elf University Splunk](https://splunk.elfu.org/)
 - [Elf University File Archive](http://elfu-soc.s3-website-us-east-1.amazonaws.com)
+- [James Brodsky, Dashing Through the Logs](https://www.youtube.com/watch?v=qbIhHhRKQCw)
 
 ## Solution
 Jump to the [challenge solution](#challenge).
